--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ footer {
     background: var(--color-header);
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     margin-top: 50px;
 }
 
@@ -190,8 +190,8 @@ footer {
 
 .redes-sociales a {
     color: white;
-    margin: 0 10px;
-    font-size: 1.5rem;
+    margin: 0 30px;
+    font-size: 2.5rem;
 }
 
 /* Responsive */
@@ -551,12 +551,12 @@ footer {
     margin: 0 auto;
 }
 
-.slider-track {
+/* .slider-track {
     display: flex;
     gap: 20px;
     animation: scroll 30s linear infinite;
-    width: calc(250px * 12); /* Ajusta según cantidad de videos */
-}
+    width: calc(250px * 5); 
+} */
 
 .video-container {
     min-width: 250px;
@@ -577,10 +577,10 @@ footer {
     100% { transform: translateX(calc(-250px * 6)); }
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .slider-track {
         animation: scroll 40s linear infinite;
-    }
+    } 
     
     .video-container {
         min-width: 200px;
